--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -32,7 +32,9 @@
      "end_time": "2020-03-04T05:02:40.233977Z",
      "start_time": "2020-03-04T05:02:36.359329Z"
     },
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -64,7 +66,10 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:02:44.660742Z",
      "start_time": "2020-03-04T05:02:40.237057Z"
-    }
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -223,15 +228,13 @@
      "end_time": "2020-03-04T05:02:45.687638Z",
      "start_time": "2020-03-04T05:02:45.670540Z"
     },
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "# seaborn correlation plot for categorical data- used for incident counts grouped by datetimes\n",
     "def corr_plot(data, minv=-.3, maxv=.3, dummy=True):\n",
-    "    \"\"\"pretty blue/green seaborn correlation plot:\n",
+    "    \"\"\"correlation plot:\n",
     "    \n",
     "    data= dataframe(will include all columns)\n",
     "    minv = -float, maxv = float  --adjust closer to 0 for more contrast, closer to -1/1 for less\n",
@@ -314,7 +317,10 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:02:45.731030Z",
      "start_time": "2020-03-04T05:02:45.715494Z"
-    }
+    },
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -690,7 +696,8 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:02:46.092466Z",
      "start_time": "2020-03-04T05:02:45.825866Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4700,8 +4707,7 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:03:05.229881Z",
      "start_time": "2020-03-04T05:03:05.213745Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [
     {
@@ -5149,7 +5155,7 @@
      "end_time": "2020-03-04T05:03:11.213051Z",
      "start_time": "2020-03-04T05:03:06.696966Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5402,7 +5408,8 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:03:11.733036Z",
      "start_time": "2020-03-04T05:03:11.708817Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5459,7 +5466,8 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:03:11.758900Z",
      "start_time": "2020-03-04T05:03:11.736071Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -7580,7 +7588,8 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:03:12.110865Z",
      "start_time": "2020-03-04T05:03:12.074818Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -8439,7 +8448,8 @@
     "ExecuteTime": {
      "end_time": "2020-03-04T05:03:40.331773Z",
      "start_time": "2020-03-04T05:03:40.297307Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -10842,6 +10852,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Models include classification for temperament, disposition(outcome), and a binary classifier for bite/dangerous and not bite/dangerous cases."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
@@ -10966,6 +10983,13 @@
    "outputs": [],
    "source": [
     "#print (y_train.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### default model"
    ]
   },
   {
@@ -11103,11 +11127,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### random grid"
+   ]
   },
   {
    "cell_type": "code",
@@ -11178,6 +11202,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### grid search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
@@ -11238,6 +11269,13 @@
     "# Best accuracy and parameters\n",
     "print('best score: {:.3}%'.format(gs_xgb.best_score_ * 100))\n",
     "print('params:\\n', gs_xgb.best_params_);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### final model"
    ]
   },
   {
@@ -11469,6 +11507,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data prep"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {
@@ -11585,6 +11630,13 @@
     "# steps = [('o', over), ('u', under)]\n",
     "# pipeline = Pipeline(steps=steps)\n",
     "# X_train, y_train = pipeline.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### default model"
    ]
   },
   {
@@ -11773,6 +11825,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### random grid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -11813,6 +11872,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### grid search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 219,
    "metadata": {
@@ -11842,6 +11908,13 @@
     "# best params\n",
     "print('best score: {:.4}%'.format(gs_gbt.best_score_ * 100))\n",
     "print('params:\\n', gs_gbt.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### final model"
    ]
   },
   {
@@ -12038,17 +12111,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-04T19:54:46.551430Z",
-     "start_time": "2020-03-04T19:25:18.755Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "disp = plot_confusion_matrix(gbt_gs_model, X_test, y_test,\n",
-    "                                      display_labels=class_names,\n",
+    "    #                                  display_labels=class_names,\n",
     "                                     cmap=plt.cm.Blues,\n",
     "                                     normalize='true')"
    ]
@@ -12102,6 +12169,13 @@
    "metadata": {},
    "source": [
     "Here , I've divided the classes into bite cases, or cases labeled as 'dangerous', and 'non-dangerous/non bite-case'. As most predictive features provided, once again are only a few describing physical characteristics, I anticipate limitations to the model. For a better   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data prep"
    ]
   },
   {
@@ -12182,6 +12256,13 @@
    "source": [
     "over = SMOTE(random_state=3)\n",
     "X_train, y_train = over.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### default model"
    ]
   },
   {
@@ -12290,6 +12371,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### random grid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {
@@ -12366,6 +12454,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### grid search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 189,
    "metadata": {
@@ -12436,6 +12531,13 @@
     "# Best accuracy and parameters\n",
     "print('best score: {:.4}%'.format(gs_ada.best_score_ * 100))\n",
     "print('params:\\n', gs_ada.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### final model"
    ]
   },
   {
@@ -12610,23 +12712,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# __Conclusion__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I found some challenges when cleaning the data. The most disappointing was the amount of missing values and unusable features. Although nothing looked out of the ordinary with the time data , the dates were somewhat of a mystery to me. The incident dates showed a period of time with extremely elevated incident rates that I can't come up with an explanation for.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After fitting several models and selecting the best fits for the target metrics, none of the models performed exceptionably. \n",
+    "__Data Cleaning/ Exploration__\n",
     "\n",
-    "The first classification model was intended to classify the temperment of the animal using it's physical characteristics and was not a success. Seperate notebook containing the attempted models are in repo. "
+    "I found some challenges when cleaning the data. The most disappointing was the amount of missing values and unusable features. Although nothing looked out of the ordinary with the time data , the dates were somewhat of a mystery to me. The incident dates showed a period of time with extremely elevated incident rates that I can't come up with an explanation for. The color features were difficult and I'm not sure I cleaned that column the most efficient way possible, although I did reduce the unique values from 1800 to 100. Most of the cleaning was simply editting spellings and removing unnecessary characters. I merged columns 'service_code' and 'request_type', which may have been better left separate, as the service code was given by the officer and the request type was provided by the caller, so it may have been interesting to explore the possibility of differences there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Classification Models__\n",
+    "\n",
+    "I used SMOTE oversampling and Random undersampling to balance train sets for models due to the extreme imbalance. This caused some overfitting, but even so, models performed significantly better for the individual classes.\n",
+    "\n",
+    "After fitting several models and selecting the best fits for the target metrics, none of the models performed impressively. Separate notebooks containing many trials and failures are in repo.\n",
+    "\n",
+    "The first classification model was targeting the temperament of the animal using it's physical characteristics and was not a success. I used accuracy for scoring, due to the unimportance of any class over the other. Of course, of all the classification models, this had the worst accuracy rates with little improvement from tuning.\n",
+    "\n",
+    "The second model was classifying disposition, and I used macro recall as the metric. These models also did not perform well. The last one, biting/dangerous vs' not dangerous, at least showed decent improvement from the default model using AdaBoost, but still not to a degree worth using. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Problems/Future Work__\n",
+    "\n",
+    "Ultimately I blame the dataset on the difficulties of finding a decent performing model, but I could also revise some of my cleaning approaches and perhaps have better luck then. I would like to join a dataset, or figure out a way to fill in for the features I would have loved to use in the models and for exploration. Also using data from CAA would provide a better picture of the full process of animal control and rescues procedure and the outcome of the animals, which would make for a more useful set of information to draw meaningful conclusions."
    ]
   },
   {
