--- a/BRanimal_control_main.ipynb
+++ b/BRanimal_control_main.ipynb
@@ -21,7 +21,7 @@
     "hide_input": true
    },
    "source": [
-    "## import"
+    "## imports"
    ]
   },
   {
@@ -161,9 +161,7 @@
      "end_time": "2020-03-09T04:20:50.960718Z",
      "start_time": "2020-03-09T04:20:50.953766Z"
     },
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -230,7 +228,9 @@
      "end_time": "2020-03-09T04:20:50.985992Z",
      "start_time": "2020-03-09T04:20:50.977188Z"
     },
-    "code_folding": []
+    "code_folding": [
+     1
+    ]
    },
    "outputs": [],
    "source": [
@@ -296,9 +296,7 @@
      "end_time": "2020-03-09T04:20:51.007258Z",
      "start_time": "2020-03-09T04:20:51.001089Z"
     },
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -7475,13 +7473,6 @@
    "source": [
     "#print (len(df[df.duplicated(subset=['file_number','incident_date'], keep=False)])/len(df))\n",
     "df[df.duplicated(subset=['impound_number'], keep=False)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I don't notice any rows that look similar enough to be considered duplicates. However, I also don't see this feature being useful for me."
    ]
   },
   {
